--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "league/flysystem-cached-adapter": "~1.0",
         "symfony/yaml": "~2.6"
     },
+    "version": "0.1.0-dev",
     "license": "GPL2",
     "authors": [
         {
